<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBB4F4"
    tools:context=".ui.slideshow.SlideshowFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/etBuscar"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBuscarClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/etCtClave"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#5D4037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:onClick="consultar"
        android:text="@string/etBtnBuscarFind"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtBuscarClave"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtBuscarNombre"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/etCtNombre"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#5D4037"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscarClave" />

    <EditText
        android:id="@+id/txtBuscarDireccion"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/etCtDireccion"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#5D4037"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscarNombre" />

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="72dp"
        android:onClick="cambiarCliente"
        android:text="@string/etBtnBuscarEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscarDireccion" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:onClick="borrarCliente"
        android:text="@string/etBtnBuscarBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnEditar"
        app:layout_constraintTop_toBottomOf="@+id/txtBuscarDireccion" />

</androidx.constraintlayout.widget.ConstraintLayout>